src/app.css
:root {
  --tree-head-bg: #6c6c6c;
}

html * {
  box-sizing: border-box;
}

body {
  font-family: Roboto, sans-serif;
}

button.reset {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
}

.tree-node .name, .tree-node .template {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.tree-node .status {
  text-align: center;
}
.tree-node .status:not(.deleted) .icon svg {
  width: 1.2em;
  height: 1.2em;
}
.tree-node .status.published {
  color: var(--dosgato-green, #689600);
}
.tree-node .status.modified {
  color: var(--dosgato-yellow, #ffbf28);
}
.tree-node .status.unpublished {
  color: var(--dosgato-red, #9a3332);
}
.tree-node .status.deleted {
  color: #555;
}
.tooltip-wrapper {
  display: flex;
  justify-content: center;
}
.tree-node .modified span, .tree-node .modifiedBy {
  font-size: 0.9em;
}
.tree-node .modified span.short {
  display: none;
}
[data-eq~="700px"] .tree-node .modified span.full {
  display: none;
}
[data-eq~="700px"] .tree-node .modified span.short {
  display: block;
}
[data-eq~="700px"] .tree-header .modified,
[data-eq~="700px"] .tree-node .modified {
    width: 7em !important;
}
[data-eq~="700px"] .tree-header .status,
[data-eq~="700px"] .tree-node .status {
    width: 3.2em !important;
}

